# RTCW-SP

./: .gitignore  CMakeLists.txt  README.txt
src/: CMakeLists.txt  wolf.sln  wolf.vcxproj  wolf.vcxproj.filters
src/botlib/: CMakeLists.txt  be_aas_route.c  botlib.vcxproj  botlib.vcxproj.filters
src/cgame/: CMakeLists.txt  cg_effects.c  cg_particles.c  cg_view.c  cg_weapons.c  cgame.vcxproj  cgame.vcxproj.filters  tr_types.h
src/client/: cl_cin.c  cl_main.c  cl_scrn.c  cl_ui.c
src/extractfuncs/: CMakeLists.txt  extractfuncs.vcxproj  extractfuncs.vcxproj.filters
src/game/: CMakeLists.txt  ai_cast_think.c  game.vcxproj  game.vcxproj.filters  q_shared.h
src/qcommon/: common.c  files.c  vm.c  vm_x86.c
src/renderer/: CMakeLists.txt  qgl.h  renderer.vcxproj  renderer.vcxproj.filters  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_flares.c  tr_image.c  tr_init.c  tr_main.c  tr_scene.c  tr_shade.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c
src/server/: sv_game.c
src/splines/: CMakeLists.txt  Splines.vcxproj  Splines.vcxproj.filters  splines.cpp  splines.h
src/ui/: CMakeLists.txt  ui.vcxproj  ui.vcxproj.filters  ui_shared.c
src/win32/: win_gamma.c  win_glimp.c  win_main.c  win_qgl.c  win_shared.c  win_syscon.c
