cmake_minimum_required(VERSION 3.2)
project (renderer)

add_definitions(
-D_LIB
-D__USEA3D
-D__A3D_GEOM
-D_CRT_SECURE_NO_WARNINGS
)

set(HEADER_FILES
anorms256.h
../qcommon/cm_public.h
../win32/glw_win.h
../jpeg-6/jchuff.h
../game/q_shared.h
../qcommon/qcommon.h
../qcommon/qfiles.h
qgl.h
../win32/resource.h
../game/surfaceflags.h
tr_local.h
tr_public.h
../cgame/tr_types.h
../win32/win_local.h
../jpeg-6/jcapimin.c
../jpeg-6/jccoefct.c
../jpeg-6/jccolor.c
../jpeg-6/jcdctmgr.c
../jpeg-6/jchuff.c
../jpeg-6/jcinit.c
../jpeg-6/jcmainct.c
../jpeg-6/jcmarker.c
../jpeg-6/jcmaster.c
../jpeg-6/jcomapi.c
../jpeg-6/jcparam.c
../jpeg-6/jcphuff.c
../jpeg-6/jcprepct.c
../jpeg-6/jcsample.c
../jpeg-6/jctrans.c
../jpeg-6/jdapimin.c
../jpeg-6/jdapistd.c
../jpeg-6/jdatadst.c
../jpeg-6/jdatasrc.c
../jpeg-6/jdcoefct.c
../jpeg-6/jdcolor.c
../jpeg-6/jddctmgr.c
../jpeg-6/jdhuff.c
../jpeg-6/jdinput.c
../jpeg-6/jdmainct.c
../jpeg-6/jdmarker.c
../jpeg-6/jdmaster.c
../jpeg-6/jdpostct.c
../jpeg-6/jdsample.c
../jpeg-6/jdtrans.c
../jpeg-6/jerror.c
../jpeg-6/jfdctflt.c
../jpeg-6/jidctflt.c
../jpeg-6/jmemmgr.c
../jpeg-6/jmemnobs.c
../jpeg-6/jutils.c
../jpeg-6/jconfig.h
../jpeg-6/jdct.h
../jpeg-6/jdhuff.h
../jpeg-6/jerror.h
../jpeg-6/jinclude.h
../jpeg-6/jmemsys.h
../jpeg-6/jmorecfg.h
../jpeg-6/jpegint.h
../jpeg-6/jpeglib.h
../jpeg-6/jversion.h
../ft2/ahangles.c
../ft2/ahglobal.c
../ft2/ahglyph.c
../ft2/ahhint.c
../ft2/ahmodule.c
../ft2/ahoptim.c
../ft2/ftcalc.c
../ft2/ftdebug.c
../ft2/ftextend.c
../ft2/ftglyph.c
../ft2/ftgrays.c
../ft2/ftinit.c
../ft2/ftlist.c
../ft2/ftmm.c
../ft2/ftnames.c
../ft2/ftobjs.c
../ft2/ftoutln.c
../ft2/ftraster.c
../ft2/ftrend1.c
../ft2/ftsmooth.c
../ft2/ftstream.c
../ft2/ftsystem.c
../ft2/sfdriver.c
../ft2/sfobjs.c
../ft2/ttcmap.c
../ft2/ttdriver.c
../ft2/ttgload.c
../ft2/ttinterp.c
../ft2/ttload.c
../ft2/ttobjs.c
../ft2/ttpload.c
../ft2/ttpost.c
../ft2/ttsbit.c
../ft2/ahangles.h
../ft2/ahglobal.h
../ft2/ahglyph.h
../ft2/ahhint.h
../ft2/ahloader.h
../ft2/ahmodule.h
../ft2/ahoptim.h
../ft2/ahtypes.h
../ft2/autohint.h
../ft2/freetype.h
../ft2/ftcalc.h
../ft2/ftconfig.h
../ft2/ftdebug.h
../ft2/ftdriver.h
../ft2/fterrors.h
../ft2/ftextend.h
../ft2/ftglyph.h
../ft2/ftgrays.h
../ft2/ftimage.h
../ft2/ftlist.h
../ft2/ftmemory.h
../ft2/ftmm.h
../ft2/ftmodule.h
../ft2/ftnames.h
../ft2/ftobjs.h
../ft2/ftoption.h
../ft2/ftoutln.h
../ft2/ftraster.h
../ft2/ftrend1.h
../ft2/ftrender.h
../ft2/ftsmooth.h
../ft2/ftstream.h
../ft2/ftsystem.h
../ft2/fttypes.h
../ft2/psnames.h
../ft2/sfdriver.h
../ft2/sfnt.h
../ft2/sfobjs.h
../ft2/t1tables.h
../ft2/ttcmap.h
../ft2/ttdriver.h
../ft2/tterrors.h
../ft2/ttgload.h
../ft2/ttinterp.h
../ft2/ttload.h
../ft2/ttnameid.h
../ft2/ttobjs.h
../ft2/ttpload.h
../ft2/ttpost.h
../ft2/ttsbit.h
../ft2/tttables.h
../ft2/tttags.h
../ft2/tttypes.h
)

set(SOURCE_FILES
tr_animation.c
tr_backend.c
tr_bsp.c
tr_cmds.c
tr_cmesh.c
tr_curve.c
tr_flares.c
tr_font.c
tr_image.c
tr_init.c
tr_light.c
tr_main.c
tr_marks.c
tr_mesh.c
tr_model.c
tr_noise.c
tr_scene.c
tr_shade.c
tr_shade_calc.c
tr_shader.c
tr_shadows.c
tr_sky.c
tr_surface.c
tr_world.c
../win32/win_gamma.c
../win32/win_glimp.c
../win32/win_qgl.c
ref_trin.def
)

add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})